[package]
name = "hyper-tls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["io-std", "macros", "net", "rt-multi-thread"] }
rustls = "0.19"
hyper-rustls = "0.22"
futures-util = { version = "0.3.1", default-features = false }
tokio-rustls = "0.14.0"
