[package]
name = "async-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", features = ["thread-pool"] }

[[bin]]
name = "raw"
path = "src/raw.rs"

[[bin]]
name = "futures"
path = "src/futures.rs"

[[bin]]
name = "tokio"
path = "src/tokio.rs"

[[bin]]
name = "async_move"
path = "src/async_move.rs"
